# Verve

./: .gitignore  AGENTS.md  CLAUDE.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.web.json
.claude/: settings.local.json
.claude/agents/: developer.agent.md  spec-writer.agent.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  manager.agent.md  ux-designer.agent.md
build-resources/: icon.icns
docs/designs/: adjustment-menu.html  bilateral-filter.html  black-and-white.html  bloom.html  brightness-contrast.html  clone-stamp.html  color-balance.html  color-dithering.html  color-grading.html  color-invert.html  color-key.html  color-temperature.html  color-vibrance.html  content-aware-fill-sampling.html  content-aware-fill.html  curves.html  dds-format-support.html  drop-shadow.html  filters-menu.html  find-layers.html  free-transform.html  gaussian-blur.html  generate-palette.html  glow.html  halftone.html  hdr-fp32-mode.html  hue-saturation.html  indexed-color-mode.html  layer-groups.html  lens-flare-streak-controls.html  lens-flare.html  median-filter.html  motion-blur.html  noise-filmgrain-lensblur-clouds.html  object-selection-tool.html  outline.html  palette-file-io.html  palette-pxshop-persistence.html  pixel-format-abstraction.html  pixelate.html  (+13 more)
docs/developerguides/: debugging.md  dev-environment-setup.md  project-structure.md
docs/specifications/: dds-format-support.md  find-layers.md  halftone.md  hdr-fp32-mode.md  indexed-color-mode.md  noise-filmgrain-lensbur-clouds.md  palette-pxshop-persistence.md  pixel-format-abstraction.md  polygonal-selection-tool.md  reduce-colors.md  sharpening-filters.md  swatch-groups.md  text-tool.md  tiled-mode.md  unified-rasterization-pipeline.md  webgpu-compute-filters.md  webgpu-migration.md
docs/technical-design/: color-dithering.md  curves.md  dds-format-support.md  halftone.md  hdr-fp32-mode.md  indexed-color-mode.md  layer-groups.md  object-selection-tool.md  palette-file-io.md  palette-pxshop-persistence.md  pixel-format-abstraction.md  pixelate.md  sharpening-filters.md  swatch-groups.md  tiled-mode.md  unified-rasterization-pipeline.md  webgpu-compute-filters.md  webgpu-migration.md
electron/main/: colorProfiles.ts  fileAssociations.ts  index.ts  inpaint.ts  ipc.ts  isnet.ts  menu.ts  preferences.ts  upscale.ts
electron/preload/: index.d.ts  index.ts
resources/models/isnet/: isnet-general-use.onnx
resources/models/realesrgan/: RealESRGAN_x4plus_anime_6B.onnx  realesr-general-x4v3.onnx
src/: App.module.scss  App.tsx  env.d.ts  main.tsx
src/core/: menuConstants.ts
src/core/cms/: colorProfileStore.ts  displayProfile.ts  iccProfile.ts  lcms2.ts  profilePickerStore.ts  proofSetup.ts
src/core/effects/: BevelEffect.tsx  BlackAndWhiteEffect.tsx  ColorDitheringEffect.tsx  ColorGradingEffect.tsx  ColorTemperatureEffect.tsx  ColorVibranceEffect.tsx  HalationEffect.tsx  HalftoneEffect.tsx  IPipelineEffect.ts  InnerGlowEffect.tsx  LensFlareEffect.tsx  MedianFilterEffect.tsx  MotionBlurEffect.tsx  PinchEffect.tsx  SeamlessTextureEffect.tsx  SharpenEffect.tsx  ShearEffect.tsx  TwirlEffect.tsx  UnsharpMaskEffect.tsx  effectRegistry.ts  effectTypes.ts  index.ts  shaderLoader.ts
src/core/io/: ddsWorker.ts  encodeAnimatedGif.ts  exportDds.ts  exportHdr.ts  exportJpeg.ts  exportPdf.ts  exportPng.ts  exportPsd.ts  exportTga.ts  exportTiff.ts  exportTiff32.ts  exportWebp.ts  hdrCodec.ts  imageLoader.ts  psdLoader.ts
src/core/lut/: LUT.ts  bakedLuts.ts  cameraIdt.ts  index.ts  layerColorSpace.ts  lutGpu.ts  lutSelectOptions.tsx  lutStore.ts  parseCubeLut.ts
src/core/services/: captureBrush.ts  useAdjustments.ts  useAnimationPlayback.ts  useAppLifecycle.ts  useAutoMask.ts  useBrushCursor.ts  useBrushes.ts  useCanvas.ts  useCanvasPointerInput.ts  useCanvasRenderLoop.ts  useCanvasTransforms.ts  useCanvasViewport.ts  useClipboard.ts  useColorMode.ts  useColorProfile.ts  useContentAwareFill.ts  useCursorPixelInfo.ts  useCurvesHistogram.ts  useCurvesPresets.ts  useDialogState.ts  useExportOps.ts  useFileOps.ts  useFilters.ts  useFormatRemount.ts  useGpuLayerInit.ts  useGpuLayerSync.ts  useHistory.ts  useIndexedSwatchSync.ts  useKeyboardShortcuts.ts  useLayerArrange.ts  useLayerGroups.ts  useLayers.ts  useLutOps.ts  useMacNativeMenu.ts  useObjectRemoval.ts  useObjectSelection.ts  usePaletteFileOps.ts  usePolygonalSelection.ts  useSpritesheetAnimationOps.ts  useTabs.ts  (+7 more)
src/core/store/: AppContext.tsx  CanvasContext.tsx  adjustmentClipboardStore.ts  adjustmentPreviewStore.ts  brushManagerStore.ts  brushOverridesStore.ts  brushStore.ts  clipboardStore.ts  cloneStampStore.ts  cropStore.ts  cursorStore.ts  displayStore.ts  historyStore.ts  inpaintMaskStore.ts  layerDataTransfer.ts  memoryStore.ts  notificationStore.ts  objectSelectionStore.ts  paletteCycleStore.ts  pixelBrushStore.ts  polygonalSelectionStore.ts  preferencesStore.ts  scope.ts  selectionStore.ts  statusMessageStore.ts  tabTypes.ts  transformStore.ts  viewportCommands.ts
src/core/tools/: index.ts  toolRegistry.ts
src/graphics/rasterization/: GpuRasterPipeline.ts  (+2 more)
src/styles/: _mixins.scss  _variables.scss  global.scss
src/tools/: blur.tsx  brush.tsx  cloneStamp.tsx  dodge.tsx  eraser.tsx  eyedropper.tsx  fill.tsx  frame.tsx  gradient.tsx  hand.tsx  index.ts  magicWand.tsx  measure.tsx  move.tsx  noop.tsx  objectSelection.tsx  pencil.tsx  pick.tsx  polygonalSelection.tsx  quickSelect.tsx  select.tsx  shape.tsx  sharpen.tsx  smudge.tsx  text.tsx  transform.tsx  types.ts  zoom.tsx
src/types/: brush.ts  index.ts
src/utils/: computeSourceMask.ts  devicePalettes.ts  dynamicCurve.ts  indexedColorUtils.ts  layerTree.ts  paletteFormat.ts  paletteGenerators.ts  pixelFormatConvert.ts  swatchSort.ts  userFeedback.ts
src/ux/: index.ts
src/wasm/: brushStamp.ts  grabcutHybrid.ts  index.ts  types.ts  wasmHeapStorage.ts
wasm/: CMakeLists.txt
wasm/src/: brush_stamp.cpp  brush_stamp.h  cms_bindings.cpp  dds.cpp  dds.h  exr.cpp  fill.cpp  fill.h  filters.cpp  filters.h  pixelops.cpp  transform.cpp  transform.h
(+700 files in other folders)
